# Bachelor_Thesis

./: .gitignore  AP.py  Annotate.py  Bachelors_Thesis.code-workspace  Benchmark_Inference.py  Benchmark_Metrics.py  Benchmark_Model.py  Generate.py  Green_Screen.glb  Predict.py  README.md  check_label.py  combined.tex  config.json  edge_detections.py  gen_annotate.txt  generate_random.py  log.txt  log_annotate.txt  log_train.txt  logs.txt  pyproject.toml  real_val.py  run_annotate.sh  run_gen.sh  run_train.sh  test.py  train copy.py  train.py
Blender_Files/: Scene.blend  Scene.blend1  Scene_1.blend1  Scene_Main_1.blend  Scene_old.blend
Blender_Files/models/: category_map.json
Demonstrator/: demonstrator.py
benchmarks/8object/8object_x/: 8object_x_HED1_benchmark.csv  8object_x_active_canny_benchmark.csv  8object_x_anime_style_benchmark.csv  8object_x_canny_benchmark.csv  8object_x_contour_style_benchmark.csv  8object_x_control_benchmark.csv  8object_x_opensketch_style_benchmark.csv
informative_drawings/: convert.py  dataset.py  requirements.txt
test_files/labeled_data/bit_holder_black/: data.yaml  (+2 more)
trains/multimodel_active_canny/: args.yaml  results.csv
trains/multimodel_canny/: args.yaml  results.csv
trains/multimodel_control/: args.yaml  results.csv
trains/train_honeycomb_tool_HED1/: args.yaml  results.csv
trains/train_honeycomb_tool_HED2/: args.yaml  results.csv
trains/train_honeycomb_tool_active_canny/: args.yaml  results.csv
trains/train_honeycomb_tool_canny/: args.yaml  results.csv
trains/train_honeycomb_tool_control/: args.yaml  results.csv
(+1067 files in other folders)
